[package]
name = "filescream"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = "2.10.0"
blake3 = "1.8.3"
globset = "0.4.18"
hashbrown = "0.16.1"
ignore = "0.4.25"
serde = "1.0.228"
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }

[lib]
name = "filescream"
path = "src/lib.rs"

[[bin]]
name = "filescream"
path = "src/main.rs"
