[package]
name = "iface"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
bitflags.workspace = true
tokio = { workspace = true, features = ["full"] }
omnitrace-core = { path = ".." }
async-trait.workspace = true
serde.workspace = true
log.workspace = true
libc.workspace = true

[lib]
name = "iface"
path = "src/lib.rs"

[[bin]]
name = "iface"
path = "src/main.rs"
