[package]
name = "netpacket"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
bitflags.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
omnitrace-core = { path = ".." }
async-trait.workspace = true
glob = "0.3.3"
libc.workspace = true

[lib]
name = "netpacket"
path = "src/lib.rs"

[[bin]]
name = "netpacket"
path = "src/main.rs"
