[package]
name = "nettools"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
bitflags.workspace = true
libc.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
omnitrace-core = { path = ".." }

[lib]
name = "nettools"
path = "src/lib.rs"

[[bin]]
name = "nettools-hostchange"
path = "src/bin/nettools-hostchange.rs"

[[bin]]
name = "nettools-routes"
path = "src/bin/nettools-routes.rs"

[[bin]]
name = "nettools-default-route"
path = "src/bin/nettools-default-route.rs"

[[bin]]
name = "nettools-nethealth"
path = "src/bin/nettools-nethealth.rs"

[[bin]]
name = "nettools-sockets"
path = "src/bin/nettools-sockets.rs"

[[bin]]
name = "nettools-neighbours"
path = "src/bin/nettools-neighbours.rs"

[[bin]]
name = "nettools-route-lookup"
path = "src/bin/nettools-route-lookup.rs"
