[package]
name = "socktray"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
bitflags.workspace = true
tokio = { workspace = true, features = ["full"] }
omnitrace-core = { path = ".." }
async-trait.workspace = true
glob = "0.3.3"
serde.workspace = true
log.workspace = true
libc.workspace = true

[lib]
name = "socktray"
path = "src/lib.rs"

[[bin]]
name = "socktray"
path = "src/main.rs"
